added google captcha

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
     "ng-apexcharts": "^1.15.0",
+    "ng-recaptcha-2": "^15.0.3-rc2",
     "pdfmake": "^0.2.15",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -40,8 +41,8 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.2",
-    "@angular/cli": "^19.0.2",
+    "@angular-devkit/build-angular": "^19.0.6",
+    "@angular/cli": "^19.0.6",
     "@angular/compiler-cli": "^19.0.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.4.0",
