--- a/package.json
+++ b/package.json
@@ -26,14 +26,19 @@
     "@angular/router": "^19.0.5",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@types/crypto-js": "^4.2.2",
+    "@types/papaparse": "^5.3.15",
+    "@types/qrcode": "^1.5.5",
     "ag-grid-angular": "^32.3.3",
     "ag-grid-community": "^32.3.3",
     "apexcharts": "^4.1.0",
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
+    "docx": "^9.2.0",
     "ng-apexcharts": "^1.15.0",
     "ng-recaptcha-2": "^15.0.3-rc2",
+    "papaparse": "^5.5.2",
     "pdfmake": "^0.2.18",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
