--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^19.2.2",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@types/crypto-js": "^4.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/papaparse": "^5.3.15",
     "@types/qrcode": "^1.5.5",
     "ag-grid-angular": "^32.3.3",
@@ -34,6 +35,8 @@
     "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
     "docx": "^9.2.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "ng-apexcharts": "^1.15.0",
     "ng-recaptcha-2": "^15.0.3-rc2",
     "papaparse": "^5.5.2",
